--- a/templates/includes/base.html
+++ b/templates/includes/base.html
@@ -3,13 +3,12 @@
 <head>
   <title>{% block title %}{% endblock %}</title>
 </head>
-<boday>
-  <h1>My helpful timestamp site</h1>
+<body>
   {% block content %}{% endblock %}
 
   {% block footer %}
     <hr>
     <p>Thanks for visiting my site.</p>
   {% endblock %}
-</boday>
+</body>
 </html>
