Refactor away search_form in views

--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -7,7 +7,7 @@
 {% if error %}
 <p style="color: red;">Please submit a valid search term.</p>
 {% endif %}
-<form action="/search/" method="get">
+<form action="" method="get">
   <input type="text" name="query">
   <input type="submit" value="Search">
 </form>
